fix: utv klab archinisis sport_id integration
