# cmd/api/archinisis/users.go
@@ -19,20 +19,6 @@ func NewUserDataHandler(store archinisis.Users, cache *cache.Storage) *UserDataH
 	return &UserDataHandler{store: store, cache: cache}
 }
 
-// GetSporttiIDs godoc
-//
-//	@Summary		Get all Sportti IDs
-//	@Description	Returns a list of all Sportti IDs
-//	@Tags			ARCHINISIS - User
-//	@Accept			json
-//	@Produce		json
-//	@Success		200	{object}	swagger.UserDataArchinisisResponse
-//	@Failure		401	{object}	swagger.UnauthorizedResponse
-//	@Failure		403	{object}	swagger.ForbiddenResponse
-//	@Failure		500	{object}	swagger.InternalServerErrorResponse
-//	@Failure		503	{object}	swagger.ServiceUnavailableResponse
-//	@Security		BearerAuth
-//	@Router			/archinisis/sport-ids [get]
 func (h *UserDataHandler) GetSporttiIDs(w http.ResponseWriter, r *http.Request) {
 	if !authz.Authorize(r) {
 		utils.ForbiddenResponse(w, r, fmt.Errorf("access denied"))
