# cmd/api/klab/users.go
@@ -26,20 +26,6 @@ type KlabUserParams struct {
 	ID string `validate:"required,numeric"`
 }
 
-// GetSporttiIDs godoc
-//
-//	@Summary		Get all Sportti IDs
-//	@Description	Returns a list of all Sportti IDs
-//	@Tags			KLAB - User
-//	@Accept			json
-//	@Produce		json
-//	@Success		200	{object}	swagger.UserDataKlabResponse
-//	@Failure		401	{object}	swagger.UnauthorizedResponse
-//	@Failure		403	{object}	swagger.ForbiddenResponse
-//	@Failure		500	{object}	swagger.InternalServerErrorResponse
-//	@Failure		503	{object}	swagger.ServiceUnavailableResponse
-//	@Security		BearerAuth
-//	@Router			/klab/sport-ids [get]
 func (h *UserDataHandler) GetSporttiIDs(w http.ResponseWriter, r *http.Request) {
 	if !authz.Authorize(r) {
 		utils.ForbiddenResponse(w, r, fmt.Errorf("access denied"))
